--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -74,5 +74,11 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 }
