--- a/app/style/header.scss
+++ b/app/style/header.scss
@@ -39,6 +39,11 @@
     width: 34px;
     height: 34px;
     padding: 8px;
+    cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+      opacity: 0.8;
+    }
     img {
       width: 100%;
       height: 100%;
