--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -1,5 +1,5 @@
 @import "~normalize.css/normalize.css";
-@import "~swiper/swiper.min.css";
+@import "~swiper/swiper-bundle.min.css";
 @import "./fonts.scss";
 
 * {
