--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -101,38 +101,38 @@
       height: 100%;
       object-fit: cover;
       object-position: center;
+      display: block;
     }
   }
 }
-
+.swiper-button-prev {
+  background-image: url(assets/images/icons/shop-slider-arrow.svg);
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  &::after {
+    content: none;
+  }
+}
+.swiper-button-next {
+  background-image: url(assets/images/icons/shop-slider-arrow.svg);
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  transform: rotate(180deg);
+  &::after {
+    content: none;
+  }
+}
 .shop-slider {
   margin-top: 30px;
   height: fit-content;
   max-height: 500px;
   .swiper-wrapper {
-  }
-  .shop-slider__prev {
-    background-image: url(assets/images/icons/shop-slider-arrow.svg);
-    background-position: center center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 50px;
-    height: 50px;
-    &::after {
-      content: none;
-    }
-  }
-  .shop-slider__next {
-    background-image: url(assets/images/icons/shop-slider-arrow.svg);
-    background-position: center center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 50px;
-    height: 50px;
-    transform: rotate(180deg);
-    &::after {
-      content: none;
-    }
   }
 }
 .shop-item {
@@ -278,5 +278,101 @@
   }
   .top-slider__description {
     max-width: 600px;
+  }
+}
+
+.our-philosophy {
+  height: 560px;
+  border-radius: 10px;
+  margin-top: 30px;
+  overflow: hidden;
+  .top-slider__thumbnail {
+    img {
+      object-fit: cover;
+      object-position: top right;
+    }
+  }
+  .top-slider__description {
+    max-width: 600px;
+  }
+  .top-slider__content {
+    justify-content: space-between;
+    height: 100%;
+  }
+}
+
+.reviews-slider {
+  width: 100%;
+  height: 600px;
+  margin-top: 30px;
+  border-radius: 10px;
+  background: linear-gradient(
+    74.66deg,
+    #d7e6ef -5.56%,
+    #ecf0f3 36.64%,
+    #f0f0f0 100%
+  );
+  &__item {
+    border-radius: 10px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  &__col {
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;
+    width: 100%;
+  }
+  &__title {
+    font-family: "William Subhead Pro";
+    font-style: italic;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 58px;
+    /* identical to box height */
+
+    display: flex;
+    align-items: center;
+
+    color: #7699af;
+  }
+  &__description {
+    margin-top: 30px;
+    p {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 18px;
+      display: flex;
+      align-items: center;
+      letter-spacing: 1.5px;
+
+      color: #7699af;
+      & + p {
+        margin-top: 30px;
+      }
+    }
+  }
+  &__link {
+    font-family: "Mabry Pro";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 23px;
+    /* identical to box height, or 144% */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #7699af;
+    padding: 19px 54px;
+    border: 2px solid #7699af;
+    border-radius: 30px;
   }
 }
