--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -44,6 +44,9 @@
     letter-spacing: 1.1px;
 
     color: #364e5c;
+    &.dark {
+      color: #ffffff;
+    }
   }
   &__description {
     font-family: "Mabry Pro";
@@ -58,6 +61,9 @@
     color: #364e5c;
     margin-top: 30px;
     max-width: 425px;
+    &.dark {
+      color: #ffffff;
+    }
   }
   &__content {
     display: flex;
@@ -154,6 +160,7 @@
   height: 500px;
   &__status {
     position: absolute;
+    z-index: 3;
     top: 40px;
     left: 0px;
     padding: 10px 50px;
@@ -306,8 +313,7 @@
   }
   &__title {
     grid-area: title;
-    font-family: "William Subhead Pro";
-    font-style: italic;
+    font-family: "Mabry Pro";
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
