mobile without footer

--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -467,6 +467,15 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  &__thumbnail {
+    width: 100%;
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
   &__col {
     padding: 30px;
     display: flex;
