--- a/app/style/media.scss
+++ b/app/style/media.scss
@@ -253,4 +253,143 @@
       }
     }
   }
+  .test,
+  .our-philosophy {
+    height: 440px;
+    .top-slider__title {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 28px;
+      /* identical to box height, or 93% */
+
+      display: flex;
+      align-items: center;
+
+      /* White */
+
+      color: #f5f5f7;
+    }
+    .top-slider__description {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 140.62%;
+      /* or 22px */
+
+      /* White */
+
+      color: #f5f5f7;
+    }
+    .top-slider__thumbnail {
+      border-radius: 10px;
+      overflow: hidden;
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          0deg,
+          rgba(118, 153, 175, 0.5),
+          rgba(118, 153, 175, 0.5)
+        );
+        z-index: 1;
+      }
+      img {
+        object-fit: cover;
+      }
+    }
+  }
+  .our-philosophy {
+    .top-slider__thumbnail {
+      img {
+        object-position: 83%;
+      }
+    }
+  }
+  .reviews-slider {
+    .swiper-button-next,
+    .swiper-button-prev {
+      display: none;
+    }
+    .swiper-pagination {
+      bottom: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &-bullet {
+        background: #7699af;
+        opacity: 0.5;
+        width: 10px;
+        height: 10px;
+        transition: 0.3s;
+        &-active {
+          width: 16px;
+          height: 16px;
+
+          background: #7699af;
+        }
+      }
+    }
+    &__item {
+      display: flex;
+      flex-direction: column;
+      height: 440px;
+    }
+    &__col {
+      padding: 16px;
+    }
+    &__thumbnail {
+      height: 160px;
+    }
+    &__title {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 30px;
+      /* identical to box height */
+
+      display: flex;
+      align-items: center;
+
+      color: #364e5c;
+    }
+    &__description {
+      p {
+        font-family: "Mabry Pro";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 16px;
+        display: flex;
+        align-items: center;
+        letter-spacing: 1.5px;
+
+        color: #364e5c;
+      }
+    }
+    &__link {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 23px;
+      /* identical to box height, or 144% */
+
+      display: flex;
+      align-items: center;
+      text-align: center;
+
+      color: #364e5c;
+      padding: 8px 54px;
+      align-self: center;
+    }
+  }
 }
