--- a/app/style/footer.scss
+++ b/app/style/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 60px 30px 0 30px;
+  padding: 60px 0px 0 0px;
   position: relative;
   width: 100%;
   &::before {
@@ -32,6 +32,9 @@
     position: relative;
   }
   &__payment-methods {
+    &.mobile {
+      display: none;
+    }
     position: absolute;
     top: 0;
     left: 0;
@@ -116,6 +119,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     font-family: "Mabry Pro";
     font-style: normal;
     font-weight: 400;
@@ -123,6 +128,11 @@
     line-height: 20px;
     text-align: center;
     color: #7699af;
+    div {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
     img {
       margin-left: 5px;
     }
@@ -130,8 +140,7 @@
 }
 .subscribe-form {
   &__title {
-    font-family: "William Subhead Pro";
-    font-style: italic;
+    font-family: "Mabry Pro";
     font-weight: 400;
     font-size: 32px;
     line-height: 28px;
@@ -173,6 +182,9 @@
   }
 }
 .socials {
+  &.mobile {
+    display: none;
+  }
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 28px 10px;
