--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -473,6 +473,7 @@
   &__thumbnail {
     width: 100%;
     height: 100%;
+    max-height: 600px;
     img {
       width: 100%;
       height: 100%;
