scrolled header for all resolutions

--- a/app/style/media.scss
+++ b/app/style/media.scss
@@ -15,6 +15,9 @@
       gap: 15px;
     }
   }
+  .main-container {
+    margin-top: 74px;
+  }
   .nav-menu {
     gap: 15px;
   }
@@ -30,6 +33,9 @@
     padding: 16px;
   }
   .header {
+    top: 16px;
+    left: 16px;
+    width: calc(100% - 32px);
     &__container {
     }
     &__nav {
@@ -110,6 +116,9 @@
       gap: 10px;
     }
   }
+  .main-container {
+    margin-top: 72px;
+  }
 }
 @media (max-width: 768px) {
   .header {
@@ -128,6 +137,9 @@
         }
       }
     }
+  }
+  .main-container {
+    margin-top: 52px;
   }
   .top-slider {
     height: 440px;
