--- a/app/style/header.scss
+++ b/app/style/header.scss
@@ -1,10 +1,22 @@
 .header {
   background: #b4c7d3;
   border-radius: 10px 10px 0px 0px;
-  width: 100%;
+  width: calc(100% - 60px);
   padding: 30px;
-  position: relative;
+  position: fixed;
+  top: 30px;
+  left: 30px;
   z-index: 10;
+  backdrop-filter: blur(10px) brightness(80%);
+  transition: 0.3s;
+  &.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 0;
+    background: rgba(#b4c7d3, 0.6);
+  }
   &__container {
     width: 100%;
     display: grid;
@@ -150,7 +162,7 @@
   }
   .sub-menu {
     position: absolute;
-    top: 100px;
+    top: 94px;
     left: 0;
     width: 100%;
     visibility: hidden;
