--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -101,6 +101,10 @@
       background: #7699af;
       color: #f5f5f7;
     }
+    &.dark {
+      background: #7699af;
+      color: #f5f5f7;
+    }
   }
   &__thumbnail {
     position: absolute;
@@ -490,8 +494,8 @@
     width: 100%;
   }
   &__title {
-    font-family: "William Subhead Pro";
-    font-style: italic;
+    font-family: "Mabry Pro";
+    font-style: normal;
     font-weight: 400;
     font-size: 48px;
     line-height: 58px;
