--- a/app/style/header.scss
+++ b/app/style/header.scss
@@ -9,6 +9,8 @@
   z-index: 10;
   backdrop-filter: blur(10px) brightness(80%);
   transition: 0.3s;
+
+  z-index: 99999;
   &.fixed {
     position: fixed;
     top: 0;
@@ -16,6 +18,7 @@
     width: 100%;
     border-radius: 0;
     background: rgba(#b4c7d3, 0.6);
+    padding: 20px;
   }
   &__container {
     width: 100%;
