--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -29,6 +29,18 @@ button {
   cursor: pointer;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .wrapper {
   width: 100%;
   display: flex;
@@ -49,6 +61,7 @@ button {
 
 @import "./header.scss";
 @import "./home.scss";
+@import "./product.scss";
 @import "./footer.scss";
 
 @import "./media.scss";
