--- a/app/style/header.scss
+++ b/app/style/header.scss
@@ -56,10 +56,9 @@
   }
   &__right-bar {
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, 34px) 44px;
+    display: flex;
     gap: 28px;
-    justify-content: end;
+    justify-content: flex-end;
   }
   &__icon {
     width: 34px;
@@ -75,6 +74,32 @@
       height: 100%;
       object-fit: contain;
       object-position: center;
+    }
+  }
+  &__search-btn {
+    position: relative;
+    display: flex;
+    padding: 0;
+    transition: 0.3s;
+    img {
+      width: 34px;
+      height: 34px;
+      padding: 8px;
+    }
+    input {
+      overflow: hidden;
+      width: 0;
+      border: 0;
+      background: transparent;
+      color: #f5f5f7;
+      transition: 0.3s;
+      padding: 8px;
+    }
+    &.open {
+      width: 175px;
+      input {
+        width: 150px;
+      }
     }
   }
   &__lang-btn {
@@ -104,6 +129,7 @@
       }
     }
   }
+
   &__lang-dropdown {
     position: absolute;
     top: 100%;
@@ -230,6 +256,115 @@
 
         color: #364e5c;
       }
+    }
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #ebebeb;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  &.show {
+    z-index: 999999;
+    opacity: 1;
+    visibility: visible;
+  }
+  &__row {
+    display: grid;
+    grid-template-columns: 1fr 75px 1fr;
+    gap: 10px;
+    padding: 10px 16px;
+    align-items: center;
+
+    border-bottom: 1px solid #b4c7d3;
+  }
+  &__right-bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+  }
+  &__search {
+    display: flex;
+    input {
+      width: 0;
+      border: 0;
+      background: transparent;
+    }
+  }
+  &__list {
+    padding: 18px 16px;
+    width: 100%;
+    max-height: calc(100vh - 65px);
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+  &__item {
+    position: relative;
+    padding: 18px 0;
+    height: auto;
+    max-height: 56px;
+    overflow: hidden;
+    width: 100%;
+    transition: 0.3s;
+    &.show-sub-menu {
+      max-height: 500px;
+      transition: 1s;
+    }
+    a {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 20px;
+      text-transform: uppercase;
+      color: #1d1d1f;
+    }
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background: linear-gradient(
+        90deg,
+        rgba(54, 78, 92, 0) 0%,
+        #364e5c 0%,
+        rgba(54, 78, 92, 0) 100%
+      );
+    }
+    &:last-child {
+      &::after {
+        content: none;
+      }
+    }
+  }
+  &__sub-menu {
+    padding-top: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    gap: 20px;
+  }
+  &__sub-menu-item {
+    a {
+      font-family: "Mabry Pro";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 16px;
+      color: #1d1d1f;
     }
   }
 }
