--- a/app/style/media.scss
+++ b/app/style/media.scss
@@ -791,4 +791,11 @@
       }
     }
   }
+  .register {
+    &__row {
+      grid-template-columns: 1fr;
+      width: 100%;
+      gap: 0;
+    }
+  }
 }
