--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -2,6 +2,73 @@
 @import "~swiper/swiper-bundle.min.css";
 @import "./fonts.scss";
 
+%form-input {
+  padding-top: 25px;
+  position: relative;
+  width: 100%;
+  label {
+    position: absolute;
+    top: calc(100% - 35px);
+    left: 10px;
+    font-family: "Mabry Pro";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+
+    color: #6c7d87;
+    cursor: pointer;
+    transition: 0.3s;
+    z-index: 0;
+  }
+  input {
+    padding: 10px;
+    border: 0;
+    border-bottom: 1px solid #1d1d1f;
+    background: transparent;
+    width: 100%;
+    font-family: "Mabry Pro";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: #1d1d1f;
+    outline: 0;
+    position: relative;
+    z-index: 1;
+  }
+  &.input {
+    label {
+      top: 10px;
+      font-size: 16px;
+      line-height: 16px;
+    }
+  }
+}
+
+%form-btn {
+  font-family: "Mabry Pro";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  /* identical to box height, or 128% */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  /* Black */
+
+  color: #1d1d1f;
+  padding: 14px;
+  width: 100%;
+  border: 1px solid #1d1d1f;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -60,11 +127,30 @@ input[type="number"] {
   width: 100%;
   height: 600px;
 }
+.page-title {
+  font-family: "Mabry Pro";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 40px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+
+  /* Black */
+
+  color: #1d1d1f;
+  padding: 30px 0;
+}
 
 @import "./header.scss";
 @import "./home.scss";
 @import "./product.scss";
 @import "./popup.scss";
+@import "./register.scss";
 @import "./footer.scss";
 
 @import "./media.scss";
