--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -151,6 +151,8 @@ input[type="number"] {
 @import "./product.scss";
 @import "./popup.scss";
 @import "./register.scss";
+@import "./profile.scss";
+
 @import "./footer.scss";
 
 @import "./media.scss";
