--- a/app/style/home.scss
+++ b/app/style/home.scss
@@ -125,10 +125,16 @@
 .swiper-button-prev {
   background-image: url(assets/images/icons/shop-slider-arrow.svg);
   background-position: center center;
-  background-size: contain;
+  background-size: 33px;
   background-repeat: no-repeat;
   width: 50px;
   height: 50px;
+  background-color: #fff;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  margin-top: 0;
+  left: calc(100% - 150px);
   &::after {
     content: none;
   }
@@ -136,11 +142,17 @@
 .swiper-button-next {
   background-image: url(assets/images/icons/shop-slider-arrow.svg);
   background-position: center center;
-  background-size: contain;
+  background-size: 33px;
   background-repeat: no-repeat;
   width: 50px;
   height: 50px;
   transform: rotate(180deg);
+  background-color: #fff;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  margin-top: 0;
+  left: calc(100% - 80px);
   &::after {
     content: none;
   }
@@ -456,28 +468,45 @@
 
 .reviews-slider {
   width: 100%;
-  height: 600px;
-  margin-top: 30px;
+  height: 720px;
+  margin-top: 120px;
   border-radius: 10px;
-  background: linear-gradient(
-    74.66deg,
-    #d7e6ef -5.56%,
-    #ecf0f3 36.64%,
-    #f0f0f0 100%
-  );
+  background: transparent;
+  padding: 0 50px;
+  &.reviews-slider-reverse {
+    .swiper-button-prev {
+      left: calc(50% - 120px);
+    }
+    .swiper-button-next {
+      left: calc(50% - 50px);
+    }
+    .reviews-slider__item {
+      grid-template-columns: auto 560px;
+    }
+  }
   .swiper-pagination {
     display: none;
   }
+  .swiper-button-prev {
+  }
+  .swiper-wrapper {
+    display: grid;
+    grid-auto-flow: column;
+  }
   &__item {
-    border-radius: 10px;
+    border-radius: 0px;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 560px auto;
+    gap: 80px;
+    position: relative;
   }
   &__thumbnail {
     width: 100%;
     height: 100%;
-    max-height: 600px;
+    max-width: 560px;
+    border-radius: 8px;
+    overflow: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -485,65 +514,59 @@
     }
   }
   &__col {
-    padding: 30px;
+    padding: 145px 90px 30px 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-direction: column;
     align-items: flex-start;
     height: 100%;
     width: 100%;
   }
   &__title {
-    font-family: "Mabry Pro";
+    color: var(--black, #1d1d1f);
+    font-size: 40px;
+    font-family: Mabry Pro;
     font-style: normal;
     font-weight: 400;
-    font-size: 48px;
-    line-height: 58px;
-    /* identical to box height */
-
-    display: flex;
-    align-items: center;
-
-    color: #7699af;
+    line-height: normal;
+    letter-spacing: 1.1px;
+    text-transform: uppercase;
   }
   &__description {
     margin-top: 30px;
     p {
-      font-family: "Mabry Pro";
+      color: var(--black, #1d1d1f);
+      text-align: justify;
+      font-size: 20px;
+      font-family: Mabry Pro;
       font-style: normal;
-      font-weight: 300;
-      font-size: 18px;
-      line-height: 18px;
-      display: flex;
-      align-items: center;
-      letter-spacing: 1.5px;
-
-      color: #7699af;
+      font-weight: 400;
+      line-height: normal;
       & + p {
         margin-top: 30px;
       }
     }
   }
   &__link {
-    font-family: "Mabry Pro";
+    color: var(--black, #1d1d1f);
+    text-align: center;
+    font-size: 16px;
+    font-family: Mabry Pro;
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
     line-height: 23px;
-    /* identical to box height, or 144% */
 
     display: flex;
     align-items: center;
     text-align: center;
-
-    color: #7699af;
-    padding: 19px 54px;
-    border: 2px solid #7699af;
-    border-radius: 30px;
+    padding: 15px 54px;
+    border-radius: 8px;
+    border: 1px solid var(--black, #1d1d1f);
     transition: 0.3s;
+    margin-top: 30px;
     &:hover {
       color: #f5f5f7;
-      background: #7699af;
+      background: #1d1d1f;
     }
   }
 }
