--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -152,6 +152,7 @@ input[type="number"] {
 @import "./popup.scss";
 @import "./register.scss";
 @import "./profile.scss";
+@import "./about.scss";
 
 @import "./footer.scss";
 
