blog page added

--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -153,6 +153,7 @@ input[type="number"] {
 @import "./register.scss";
 @import "./profile.scss";
 @import "./about.scss";
+@import "./blog.scss";
 
 @import "./footer.scss";
 
