--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -154,6 +154,7 @@ input[type="number"] {
 @import "./profile.scss";
 @import "./about.scss";
 @import "./blog.scss";
+@import "./cart.scss";
 
 @import "./footer.scss";
 
