--- a/app/style/blog.scss
+++ b/app/style/blog.scss
@@ -135,4 +135,27 @@
       grid-area: v1;
     }
   }
+
+  &__load-more {
+    color: var(--black, #1d1d1f);
+    font-size: 20px;
+    font-family: Mabry Pro;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.4px;
+    width: 100%;
+    max-width: 400px;
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid var(--black, #1d1d1f);
+    cursor: pointer;
+    margin: 70px auto 0 auto;
+    display: block;
+    transition: 0.3s;
+    &:hover {
+      background: #1d1d1f;
+      color: #fff;
+    }
+  }
 }
