--- a/app/style/media.scss
+++ b/app/style/media.scss
@@ -825,6 +825,48 @@
   }
 }
 
+@media (max-width: 680px) {
+  .cart {
+    .popup-container {
+      padding: 15px;
+    }
+    &-item {
+      &__add-to-favorites {
+        display: none;
+      }
+      &__variations {
+        display: none;
+      }
+      &__wrap {
+        width: 100%;
+        justify-content: space-between;
+      }
+      &__title {
+        font-size: 16px;
+      }
+      &--2 {
+        .cart-item__variations {
+          display: flex;
+        }
+        .cart-item__row {
+          &:nth-child(3) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 15px;
+          }
+        }
+        .cart-item-count {
+          display: none;
+        }
+        .cart-item__add-to-cart {
+          border-radius: 8px;
+          border: 1px solid #1d1d1f;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 600px) {
   .profile {
     &__form {
