--- a/app/style/popup.scss
+++ b/app/style/popup.scss
@@ -11,6 +11,7 @@
   opacity: 0;
   visibility: hidden;
   z-index: -1;
+  padding: 10px;
   transition: 0.3s;
   &.open {
     z-index: 99999;
@@ -22,6 +23,7 @@
     border-radius: 8px;
     width: 100%;
     max-width: 500px;
+    max-height: 100%;
     padding: 30px;
     transition: 0.3s;
   }
