--- a/app/style/header.scss
+++ b/app/style/header.scss
@@ -285,13 +285,13 @@
   left: 0;
   z-index: -1;
   background: #ebebeb;
-  opacity: 0;
   visibility: hidden;
-  transition: 0.3s;
+  clip-path: circle(0% at 0 0);
+  transition: 1s ease-out;
   &.show {
     z-index: 999999;
-    opacity: 1;
     visibility: visible;
+    clip-path: circle(150% at 0 0);
   }
   &__row {
     display: grid;
