--- a/app/style/media.scss
+++ b/app/style/media.scss
@@ -6,6 +6,11 @@
   }
 }
 @media (max-width: 1200px) {
+  .shop {
+    &__container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
   .profile {
     &__col {
       padding: 0 30px;
@@ -74,7 +79,7 @@
     max-height: 600px;
   }
   .shop-item {
-    height: 600px;
+    height: 620px;
     &__content {
       &.hover {
         opacity: 1;
@@ -467,36 +472,32 @@
       gap: 30px;
     }
   }
+  .shop {
+    &__breadcrumbs {
+      a {
+        font-size: 30px;
+      }
+    }
+  }
   .shop-item {
-    height: 545px;
+    height: 575px;
     &__title {
       font-size: 20px;
       line-height: 20px;
-      /* identical to box height */
-
-      color: #364e5c;
     }
     &__price {
       .sale {
         font-size: 18px;
         line-height: 18px;
-        /* identical to box height */
-
         letter-spacing: -0.02em;
         text-transform: capitalize;
-
-        color: #364e5c;
       }
       .regular {
         font-size: 14px;
         line-height: 14px;
-        /* identical to box height */
-
         letter-spacing: -0.02em;
         text-decoration-line: line-through;
         text-transform: capitalize;
-
-        color: #364e5c;
       }
     }
     &__tags {
@@ -504,16 +505,7 @@
         font-weight: 500;
         font-size: 12px;
         line-height: 12px;
-        /* identical to box height */
-
         text-transform: capitalize;
-
-        color: #364e5c;
-      }
-    }
-    &__variations {
-      li {
-        padding: 8px;
       }
     }
     &__add-to-cart {
@@ -523,15 +515,9 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 14px;
-      /* identical to box height */
-
       display: flex;
       align-items: flex-end;
       letter-spacing: -0.02em;
-
-      /* White */
-
-      color: #f5f5f7;
     }
     &__content {
       padding: 15px;
@@ -540,6 +526,39 @@
         grid-template-areas:
           "title price"
           "tags .";
+      }
+    }
+    &:hover {
+      background: #fff;
+      .shop-item__content {
+        &.hover {
+          opacity: 1;
+          visibility: visible;
+        }
+        &.main {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+      .shop-item__thumbnail {
+        img {
+          &:nth-child(1) {
+            opacity: 0;
+            visibility: hidden;
+          }
+          &:nth-child(2) {
+            opacity: 1;
+            visibility: visible;
+          }
+        }
+      }
+      .shop-item__status {
+        opacity: 1;
+        visibility: visible;
+      }
+      .shop-item__add-to-favorites {
+        opacity: 1;
+        visibility: visible;
       }
     }
   }
@@ -894,6 +913,18 @@
       margin-top: 70px;
       text-align: center;
       align-self: center;
+    }
+  }
+  .shop {
+    &__container {
+      grid-template-columns: 1fr;
+    }
+    &__breadcrumbs {
+      a {
+        &:nth-child(2) {
+          display: none;
+        }
+      }
     }
   }
 }
